--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,4 +45,14 @@
         <servlet-name>Index</servlet-name>
         <url-pattern></url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>LgFilter</filter-name>
+        <filter-class>controller.LoginFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>LgFilter</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
 </web-app>
