welcome file list

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -99,4 +99,8 @@
         <filter-name>LgFilter</filter-name>
         <url-pattern>/association</url-pattern>
     </filter-mapping>
+
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+    </welcome-file-list>
 </web-app>
